--- a/CDX/index.html
+++ b/CDX/index.html
@@ -308,19 +308,13 @@ https://templatemo.com/tm-563-seo-dream
                       <div class="icon">
                         <img src="assets/images/contact-icon-01.png" alt="email icon">
                       </div>
-                      <p style="color:white;">learnatcodex@gmail.com</p>
+                      <p style="color:white;">codextutoring@yahoo.com</p>
                     </li>
                     <li>
                       <div class="icon">
                         <img src="assets/images/contact-icon-02.png" alt="phone">
                       </div>
                       <p style="color: white;">609-906-0581</p>
-                    </li>
-                    li>
-                      <div class="icon">
-                        <img src="assets/images/instagram_318-792344.webp" alt="insta icon" style="max-width: 35px; ;">
-                      </div>
-                      <p style="color:white;">codextutoring</p>
                     </li>
                   </ul>
                 </div>
